--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.contactDetails.ContactDetailsActivity"></activity>
+        <activity android:name=".ui.sendmessages.SendMessageActivity"></activity>
+        <activity android:name=".ui.contactDetails.ContactDetailsActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
